# CloneCharter

./: .gitignore  CLAUDE.md  README.md  Untitled.ipynb  Untitled1.ipynb  bridge_auto_scroll.py  find_max_bath.sh  inference_new_song.ipynb  inference_test_dataset.ipynb  push.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: eval_inference-checkpoint.ipynb  push-checkpoint.ipynb  train-checkpoint.sh
checkpoints/run1/auto-charter/: events.out.tfevents.1775622887.DESKTOP-LPOLU3S.15468.0
checkpoints/run1/best/: config.json  trainer_state.json
data/: audio_loaders.py  chart_loader.py  midi_loader.py
docs/: TOKENIZATION.md  tokenizer.txt
inference/: generate.py  pipeline.py
models/: chart_transformer.py  cnn_frontend.py  conditioning.py  demucs.py  mert.py  tokenizer.py
samples/: notes.chart  notes_drums.chart  nueva_cancion.chart  song.ini
scripts/: data_anal.py  duration_anal.py  merge_dataset.py  migrate_pickle.py  parse_all_songs.py  pop2piano_test.py  tokenize_chart_dataset.py
src/auto_charter/: __init__.py
src/auto_charter/audio/: __init__.py  audio_io.py  beat_aligner.py  beat_estimator.py  logmel.py  mert_extractor.py  separator.py  stem_loader.py
src/auto_charter/dataset/: __init__.py  builder.py  collator.py  schema.py
src/auto_charter/model/: __init__.py  audio_encoder.py  charter_model.py  (+2 more)
test_dataset/Caos - La Planta/: notes.chart  song.ini
test_dataset/El Precio de la Soledad/: notes.chart  song.ini
test_dataset/Grupo Marca Registrada - El Rescate/: song.ini
tests/: test_audio_shapes.py  test_beatnet.py  test_bpm.py  test_bpm_array.py  test_chart_loader.py  test_chart_parser.py  test_interpolate.py  test_loader.py  test_midi.py  test_separator.py  test_smoke.py  test_tokenizer.py
training/: collator.py  config.py  dataset.py  metrics.py  train.py
utils/: audio_utils.py  time_utils.py
(+37 files in other folders)
