[project]
name = "auto-charter"
version = "0.1.0"
description = "Clone Hero auto-charter: tokenize charts and build HuggingFace datasets"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
    "librosa>=0.10",
    "soundfile>=0.12",
    "datasets>=2.18",
    "transformers>=4.40",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "tqdm>=4.66",
    "click>=8.1",
    "pydantic>=2.6",
    "rich>=13.0",
    "demucs>=4.0",
    "huggingface_hub>=0.22",
    "pandas>=2.0",
    "accelerate>=0.30",
    "wandb>=0.17",
    "gradio>=4.0",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
tokenize-only = [
    "mido>=1.3",
    "numpy>=1.26",
    "tqdm>=4.66",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
build-dataset   = "auto_charter.scripts.build_dataset:main"
inspect-song    = "auto_charter.scripts.inspect_song:main"
validate-roundtrip = "auto_charter.scripts.validate_roundtrip:main"
process-dataset = "auto_charter.scripts.process_dataset:main"
convert-dataset  = "auto_charter.scripts.convert_dataset:main"
train-charter    = "auto_charter.scripts.train:main"
validate-charter = "auto_charter.scripts.validate:main"
demo-charter     = "auto_charter.scripts.gradio_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_charter"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true